# DoodleShoper

./: LICENSE
api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/app/: main.py
app/: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  temp.txt
app/api/: health.py
app/api/v1/: chat_resource.py  mixed_threads.py  sketch_threads.py  text_threads.py  threads_resource.py  user_resource.py
app/common/: constants.py  error.py  google_search.py  stable_diffusion.py  util.py
app/conf/: config.py  logging.py  logging.yaml
app/data/db/: .gitignore
app/db/: db.py
app/models/: create_user_resource.py  get_user_resource.py  login_user.py  model.py  register_user.py  threads.py  user_resource_common.py
app/schemas/: user_resource.py
app/services/: cloudinary.py  google_search.py  serpapi.py  stable_diffusion.py
app/tests/: test_meta.py
stable-diffusion/: README.md  docker-compose.yml
stable-diffusion/data/: .gitignore
stable-diffusion/data/extensions/sd-webui-controlnet/: .gitignore
stable-diffusion/services/AUTOMATIC1111/: Dockerfile
stable-diffusion/services/comfy/: Dockerfile
web/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.js
web/src/components/: Chat.js  LoggedIn.js  Login.js  Signup.js
web/src/components/chat/: Chat.js  Mixed.js  Sketch.js  Text.js
web/src/styles/: chat.css  index.css  login.css  main.css  overlay.css  signup.css  topbar.css
