[tool.poetry]
name = "doodleshoper"
version = "0.1.0"
description = "API Interface for the DoodleShoper orchestrating all the backend components interactions."
authors = ["Daniel Braghis <ddb1u20@soton.ac.uk>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.105.0"
uvicorn = "0.24.0"
openai = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
